<resources>
    <string name="app_name">02_Application2</string>
    <string name="title_activity_act1">Act1</string>
    <string name="title_activity_act2">Act2</string>
    <string name="title_activity_act3">Act3</string>
    <string name="title_activity_act4">Act4</string>
    <string name="go_act1">Act1로 이동</string>
    <string name="go_act2">Act2로 이동</string>
    <string name="go_act3">Act3로 이동</string>
    <string name="go_act4">Act4로 이동</string>
    <string name="name">Sunik Hwang</string>
</resources>
