<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/title_activity_act2" />

        <Button
            android:id="@+id/btn_act2_go1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_act1" />

        <Button
            android:id="@+id/btn_act2_go3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_act3" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>